--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^4.6.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
