--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "bootstrap": "^4.6.0",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonschema": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
