--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonschema": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
