--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,8 +42,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.26.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10"
   }
